--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vite-plugin-rewrite-all": "^1.0.2"
   }
 }
